4th try to fix bg fixed for coach div on mobile

--- a/css/coach.css
+++ b/css/coach.css
@@ -2,14 +2,14 @@
     color: #FFFFFF;
     font-size: 1.4em;
     margin: 0;
-    background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(../img/pexels-photo-416754.jpeg) center fixed; 
+    background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(../img/pexels-photo-416754.jpeg) no-repeat center fixed; 
     display: flex;
 }
 
 /* Mobile */
 @media all and (max-width: 540px) {
     .thecoach {
-        background-size: auto 100%; 
+        background-size: auto 100vh; 
         padding: 50px 40px;
         flex-direction: column;
         align-items: center;
